--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -49,13 +49,6 @@ a{
   font-size: 0.7rem;
 }
 
-#error-callback{
-  font-size: 0.7rem;
-  color: orangered;
-  width: 100%;
-  word-wrap: break-word;
-  padding-top: 10px;
-}
 
 h3 {
   margin: 0px 90px 0px 0px;
@@ -133,101 +126,6 @@ button:hover {
 button:disabled {
   cursor: default;
   background: #698ea5;
-}
-
-#login-form{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-  border-radius: 10px;
-  background: var(--background-light);
-  gap: 10px;
-}
-
-.centered-form {
-  display: flex;
-  align-items: center;
-  height: var(--app-height);
-  width: 100vw;
-  justify-content: center;
-  background: var(--background);
-}
-
-.form-field {
-  margin: 20px 0;
-}
-
-.form-field>* {
-  width: 100%;
-}
-
-.form-field label {
-  display: block;
-  margin-bottom: 7px;
-}
-
-.form-field input,
-.form-field select {
-  border: 2px solid var(--blue);
-  padding: 10px;
-  background: transparent;
-  border-radius: 10px;
-  color: white;
-}
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus,
-textarea:-webkit-autofill,
-textarea:-webkit-autofill:hover,
-textarea:-webkit-autofill:focus,
-select:-webkit-autofill,
-select:-webkit-autofill:hover,
-select:-webkit-autofill:focus {
-  border: 1px solid green;
-  -webkit-text-fill-color: green;
-  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
-  transition: background-color 5000s ease-in-out 0s;
-}
-
-#join-title{
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: center;
-  gap: 5px;
-}
-
-.form2{
-  border-bottom: 2px solid var(--background-light);
-  border-top: 2px solid var(--background-light);
-  padding: 5px 0 5px 0;
-}
-
-.avatars{
-  display: flex;
-  height: 200px;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  overflow-y:scroll;
-  img{
-    width: 40px;
-    height: 40px;
-    filter: saturate(0);
-    &:hover{
-      cursor: pointer;
-      filter: saturate(100%);
-    }
-  }
-}
-input[type="radio"] {
-  display: none;
-  &:checked + label img{
-    filter: saturate(100%);
-  }
 }
 
 .chat {
@@ -449,13 +347,6 @@ scrollbar-width: none;  /* Firefox */
 transition: 300ms;
 }
 
-footer{
-  position: absolute;
-  bottom: 10px;
-  text-align: justify;
-  font-size: 0.7rem;
-}
-
 
 .menu{
   display: block;
@@ -548,6 +439,45 @@ footer{
   align-items: center;
 }
 
+.info{
+  margin: 0;
+  padding: 5px;
+  height: 30px;
+  width: 30px;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 900;
+  color: grey;
+  border: 2px solid;
+  border-radius: 50%;
+  transition: 300ms;
+  &:hover{
+    cursor: pointer;
+    color: white;
+  }
+  //create a about tooltip on hover
+  &:hover::after{
+    content: 'PokeDesk \A Version: 3.0.2 \A Developer: Fuad Hasan \A Email: fuad.cs22@gmail.com \A Icons: https:flaticon.com';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    transform: translate(-5%, 120%);
+    background: var(--background-light);
+    padding: 15px;
+    border-radius: 5px;
+    color: white;
+    font-size: 0.7rem;
+    font-weight: 900;
+    z-index: 10;
+    opacity: 1;
+    text-align: left;
+    width: 150px;
+    transition: 300ms;
+    white-space: pre;
+  }
+
+}
+
 @media (orientation: landscape) and (min-device-aspect-ratio: 1/1) {
   .chat{
     padding-top: 0;
@@ -560,6 +490,12 @@ footer{
   }
   .menuwrapper{
     display: none;
+  }
+  .info{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
   }
   .menuwrapper2{
     display: flex;
