--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -86,7 +86,7 @@ button:hover {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: flex-end;
+    align-items: center;
     font-size: 1rem;
     font-weight: 900;
     gap: 5px;
