--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -630,7 +630,7 @@ img {
   }
   .info {
     position: absolute;
-    top: 0;
+    top: 10px;
     right: 0;
     margin: 10px;
   }
@@ -656,6 +656,9 @@ img {
     height: 0;
     margin: 0;
     padding: 0;
+  }
+  .topbar .topbar-wrapper {
+    background: transparent;
   }
   .chat__main {
     padding: 0 10%;
