--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -512,7 +512,7 @@ img{
   }
   .info{
     position: absolute;
-    top: 0;
+    top: 10px;
     right: 0;
     margin: 10px;
   }
@@ -537,6 +537,9 @@ img{
     height: 0;
     margin: 0;
     padding: 0;
+    .topbar-wrapper{
+      background: transparent;
+    }
   }
   .chat__main{
     padding: 0 10%;
