--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -499,6 +499,31 @@ img{
   -ms-user-select: none;
 }
 
+#video-grid{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  #my-video{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 20%;
+  }
+  #incoming{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+}
+
 @media (orientation: landscape) and (min-device-aspect-ratio: 1/1) {
   .chat{
     padding-top: 0;
