--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -595,6 +595,7 @@ button:disabled {
   padding: 15px;
   border-radius: 5px;
   color: white;
+  background: #0b1926c7;
   font-size: 0.7rem;
   font-weight: 900;
   z-index: 10;
