--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -479,6 +479,7 @@ scrollbar-width: none;  /* Firefox */
     padding: 15px;
     border-radius: 5px;
     color: white;
+    background: #0b1926c7;
     font-size: 0.7rem;
     font-weight: 900;
     z-index: 10;
