--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -35,6 +35,23 @@ body {
   overscroll-behavior-y: contain;
 }
 
+.intro{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+  margin-top: 80vh;
+  h2{
+    font-size: 1.5rem;
+    font-family: 'Comforter';
+    text-align: center;
+  }
+  .credit{
+    font-size: 0.7rem;
+  }
+}
+
 
 h1:before {
   content: "// ";
@@ -213,6 +230,8 @@ button:disabled {
   padding-left: 10px;
   display: flex;
   margin-bottom: 5px;
+  background: black;
+  mix-blend-mode: screen;
   -webkit-box-align: baseline;
   -ms-flex-align: baseline;
   align-items: baseline;
@@ -320,7 +339,6 @@ scrollbar-width: none;  /* Firefox */
 
 #retlocation{
   filter: invert(1);
-  mix-blend-mode: screen;
   height: 40px;
   width: 40px;
 }
@@ -331,14 +349,13 @@ scrollbar-width: none;  /* Firefox */
 }
 
 #messages{
-    flex-grow: 1;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     padding: 10px;
-    background: transparent;
     display: grid;
+    grid-auto-flow: row;
+    flex-grow: 1;
     grid-template-rows: 1fr;
-    align-items: end;
     scroll-behavior: smooth;
     list-style-type: none;
     gap: 2px;
@@ -413,6 +430,9 @@ scrollbar-width: none;  /* Firefox */
     .message__title h3{
       width: 100%;
       text-align: left;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-end;
     }
     .my__message__title h3{
       width: 100%;
@@ -477,7 +497,7 @@ scrollbar-width: none;  /* Firefox */
   }
   //create a about tooltip on hover
   &:hover::after{
-    content: 'PokeTab Messanger \A Version: 3.2.0 \A Developer: Fuad Hasan \A Email: fuad.cs22@gmail.com \A Icons: https:flaticon.com';
+    content: 'PokeTab Messanger \A Version: 3.2.2 \A Developer: Fuad Hasan \A Email: fuad.cs22@gmail.com \A Icons: https:flaticon.com';
     position: absolute;
     bottom: 0;
     right: 0;
